# PixelFactory

./: CMakeLists.txt
PixelFactory/: CMakeLists.txt
PixelFactory/include/: Instantiator.h
PixelFactory/include/Entities/: Entity.h
PixelFactory/include/Serialization/: Serializer.h
PixelFactory/src/: Instantiator.cpp  main.cpp
PixelFactory/src/Entities/: Entity.cpp
